tests/parse_print/issues/133/3/stderr.expected
Error:
    Parser error in file: tests/parse_print/issues/133/3/133_3.essence Error is:
ValidatorError tests/parse_print/issues/133/3/133_3.essence:7:10:
  |
7 | m = [1,2 3]
  |          ^
Missing ,
